changed nav background

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav class="nav">
-      <p>Logo</p>
+      <p class="nav__logo">Logo</p>
       <ul class="nav__list">
         <li class="nav__item">
           <a href="index.html" class="nav__link">Home</a>
